Revert commit